<resources>
    <string name="app_name">app_ifrs</string>
    <string name="formated_text_integrated_EM"><b>Técnicos integrados ao Ensino Médio</b> – permite a formação de Ensino Médio e técnica profissional simultaneamente.</string>
    <string name="formated_text_concomitants_EM"><b>Técnicos concomitantes ao Ensino Médio</b> – formação técnica profissional para os alunos que estão cursando o Ensino Médio e desejam complementar a formação em turno inverso.</string>
    <string name="formated_text_subsequent_EM"><b>Técnicos subsequentes ao Ensino Médio</b> – formação técnica profissional para os alunos que já concluíram o Ensino Médio.</string>
    <string name="formated_text_superiors"><b>Superiores de tecnologia</b> – cursos superiores cuja vocação é atender a demandas específicas do mundo do trabalho. Quem conclui é profissional de nível superior, denominado tecnólogo.</string>
    <string name="formated_text_integrated_courses">\t O Instituto Federal do Rio Grande do Sul (IFRS) Campus Rolante  oferece três cursos <b>Técnicos Integrados ao Ensino Médio</b> sendo eles <b>Técnico em Adminstração</b>, <b>Técnico em Agropecuária</b> e <b>Técnico em Informática</b>, que unem a formação do Ensino Médio com uma qualificação técnica profissional. Essa modalidade prepara o estudante para o mercado de trabalho e para o ingresso no ensino superior. Ao concluir o curso, o aluno recebe tanto o diploma do Ensino Médio quanto o do curso técnico.</string>
    <string name="formated_text_adm">   O curso técnico em Administração forma profissionais aptos a atuar em diversas áreas de uma empresa, como finanças, recursos humanos, marketing e logística. Durante o curso, o aluno aprende na prática a organizar, planejar e controlar processos administrativos, desenvolvendo habilidades importantes para o mundo do trabalho.</string>
    <string name="formated_text_agro">  O curso técnico em Agropecuária prepara o estudante para trabalhar com a produção rural, manejando animais, cultivando plantas e operando máquinas agrícolas. O curso combina teoria e prática, formando profissionais prontos para atuar no campo com técnicas modernas e sustentáveis.</string>
    <string name="formated_text_info">  O curso técnico em Informática forma profissionais capacitados para desenvolver, manter e dar suporte a sistemas e redes de computadores. O aluno aprende programação, banco de dados, hardware, redes e lógica computacional, estando preparado para atuar no setor de tecnologia.</string>
    <string name="formated_text_transport"> O IFRS Campus Rolante necessita de transporte para o deslocamento dos estudantes, que pode ser realizado por <b>empresas privadas, pelo transporte público municipal de Rolante(gratuito)</b> — dependendo da disponibilidade de linhas, horários e itinerários — ou ainda pelo transporte da Citral, que <b>pode ser gratuito</b> conforme determinadas condições. Para mais informações sobre o <b>Passe Livre da Citral e como utilizá-lo</b> para ter acesso ao transporte gratuito, clique no botão abaixo e selecione a opção correspondente.</string>
    <string name="formated_text_free_pass"> O IFRS Campus Rolante oferece a possibilidade de transporte intermunicipal para os estudantes, realizado pela empresa <b>Citral</b>. Esse serviço facilita o acesso ao campus, especialmente para quem mora em outros municípios e possui dificuldades financeiras.
        <b>Estudantes em situação de vulnerabilidade</b> podem ter direito ao <b>Passe Livre Estudantil</b>, que garante a <b>gratuidade</b> no transporte intermunicipal, conforme regras do programa</string>
    <string name="formated_requests_to_free_pass">
        - Renda familiar per capita de até 1,5 salário mínimo regional;\n
        - Residir em município diferente do local de estudo;\n
        - Utilizar transporte intermunicipal para chegar ao campus.\n
    </string>
    <string name="formated_text_documents_to_free_pass">
        - Foto 3x4;\n
        - Carteira de Identificação Estudantil válida;\n
        - Formulário cadastral e declaração de grupo familiar com firma reconhecida;\n
        - Comprovante de matrícula atualizado;\n
        - Documento oficial com foto (RG, CNH ou Certidão de Nascimento) e CPF;\n
        - Comprovante de residência atualizado (até 90 dias).
    </string>
    <string name="text_important_to_free_pass"><b>Importante:</b> Entregar toda a documentação corretamente é fundamental para conseguir o benefício.</string>
    <string name="text_information_free_pass">
        Para informações atualizadas, consulte a Coordenação de Assistência Estudantil (CAEP) do campus.\n
        Email: coordenacao.caep@rolante.ifrs.edu.br\n
        Telefone whats: +55 51 3547-9603\n
    </string>
    <string name="formated_informations_citral">
        Telefone: (51) 994546869\n
        Cidades: Igrejinha, Parobé, Taquara e Santo Antônio
    </string>
    <string name="formated_informations_rbm">
        Telefone: (51) 96693410\n
        Cidades: Parobé, Taquara
    </string>
    <string name="formated_informations_maroto">
        Telefone: (51) 999584720\n
        Email: marotoviagens.frota@gmail.com\n
        Cidades: Parobé, Taquara
    </string>
    <string name="formated_informations_tche_leva">
        Telefone: (51) 97072829\n
        Cidades: Rolante
    </string>
    <string name="formated_informations_salvador">
        Telefone: (51) 97072829\n
        Cidades: Parobé, Taquara, Igrejinha
    </string>
    <string name="formated_informations_mw">
        Telefone: (51) 997796900\n
        Email: mwturismo@tca.com.br\n
        Cidades: Rolante
    </string>
    <string name="formated_informations_dc">
        Telefone: (51) 996466420\n
        Cidades: Parobé, Taquara
    </string>
    <string name="formated_informations_scholarships">
        O <b>IFRS – Campus Rolante</b> oferece diversas oportunidades para você se envolver em atividades que vão além da sala de aula! São bolsas para Monitoria, Tutoria, Extensão, Pesquisa, Ações Integradas e Apoio Técnico.\n
        <b>Participando, você poderá:\n</b>
        -Desenvolver novas habilidades acadêmicas e profissionais;\n
        -Ampliar seu networking com professores e colegas;\n
        -Contribuir para projetos que fazem a diferença dentro e fora da instituição;\n
        -Fortalecer seu currículo com experiências práticas;\n
        -E ainda receber uma remuneração como reconhecimento pelo seu empenho!\n
        As vagas são divulgadas por meio de editais ao longo do ano, com informações sobre os requisitos, benefícios e prazos de inscrição.
    </string>
    <string name="text_complementary_activities">O IFRS Campus Rolante realiza Atividades Complementares que enriquecem a formação acadêmica e pessoal dos estudantes. Por meio de projetos de extensão e ações culturais, promove vivências que estimulam a reflexão sobre identidade, diversidade e cidadania.</string>
    <string name="text_informations_mentory">Atividade na qual o estudante auxilia outros colegas em disciplinas específicas, reforçando conteúdos, tirando dúvidas e apoiando o professor. A monitoria visa potencializar o aprendizado, promover a colaboração entre estudantes e desenvolver habilidades pedagógicas.</string>
    <string name="text_informations_tutoring">Semelhante à monitoria, a tutoria envolve o acompanhamento e apoio individualizado ou em grupo para alunos que apresentam dificuldades acadêmicas. O tutor atua como um orientador, contribuindo para o sucesso escolar e a permanência dos colegas na instituição.</string>
    <string name="text_informations_extension">A extensão universitária conecta a instituição com a comunidade externa por meio de projetos, cursos, eventos e outras ações que buscam aplicar o conhecimento acadêmico em benefício da sociedade. Estudantes bolsistas atuam diretamente na organização e execução dessas atividades.</string>
    <string name="text_informations_search">Atividade voltada para a investigação científica, tecnológica ou social, desenvolvida sob a orientação de um professor. Os bolsistas participam da elaboração, execução e divulgação de projetos de pesquisa, ampliando sua formação acadêmica e contribuindo para a produção de conhecimento.</string>
    <string name="text_informations_integrated_actions">Conjunto de atividades que unem ensino, pesquisa e extensão, promovendo a formação integral dos estudantes. Essas ações visam resolver problemas reais, estimular a interdisciplinaridade e a atuação socialmente comprometida.</string>
    <string name="formated_stages_selection_process">
        <b>➊ Solicitar isenção da taxa</b>\n
         -Para quem tem renda familiar de até 1 salário mínimo por pessoa.\n
         -Detalhes no edital de isenção.\n\n
        <b>➋ Ler os editais</b>\n
         -Cada curso tem um edital próprio com informações importantes.\n\n
        <b>➌ Fazer a inscrição</b>\n
         -Pelo formulário eletrônico no site oficial.\n
         -Necessário CPF, RG próprios e cadastro no portal gov.br.\n
         -Pode pedir ajuda presencial no campus.\n\n
        <b>➍ Pagar a taxa de inscrição</b>\n
         -Se tiver direito e conseguir isenção, não precisa pagar.\n\n
        <b>➎ Participar da prova</b> (se for a forma de ingresso escolhida)\n
         -Detalhes como conteúdo e formato no edital.\n
         -Provas anteriores e atividades preparatórias disponíveis no site.\n\n
        <b>➏ Acompanhar listas de classificação e chamadas para matrícula</b>\n
         -Publicadas no site oficial.\n
         -Ficar atento às chamadas subsequentes, se houver.\n\n
        <b>➐ Realizar a matrícula</b>\n
         -Preenchimento e envio de documentos no sistema eletrônico informado.\n\n
        <b>➑ Passar pela verificação étnico-racial</b> (se for o caso)\n
         -Obrigatório para candidatos autodeclarados negros que optarem pelas cotas\n\n
        <b>➒ Confirmar a aprovação da matrícula</b>\n
         -Enviar documentos complementares, se necessário.\n
         -Matrícula homologada após análise.\n\n
        <b>➓ Informar-se sobre o início das aulas</b>\n
         -Acompanhar orientações no site do campus.\n\n
    </string>
    <string name="formated_what_you_need_know">
        -<b>Local</b>: As provas do Campus Rolante são realizadas nas salas do próprio campus\n
        -Confirme sempre seu local de prova no site oficial do <b>ingresso IFRS</b>.
    </string>
    <string name="formated_exam_integrated">
        Prova objetiva com 40 questões:\n
        → Matemática - 10\n
        → Ciências da Natureza - 10\n
        → Ciências Humanas - 10\n
        → Língua Portuguesa - 10
    </string>
    <string name="formated_exam_tecnic">
        Prova objetiva com 40 questões:\n
        → Matemática e suas Tecnologias - 10\n
        → Ciências da Natureza e suas Tecnologias - 10\n
        → Ciências Humanas e suas Tecnologias - 10\n
        → Linguagem, Códigos e suas Tecnologias - 10
    </string>
    <string name="formated_exam_superior">
        Prova objetiva com 45 questões:\n
        → Matemática – 10\n
        → Ciências da Natureza – 10\n
        → Ciências Humanas – 10\n
        → Linguagens – 15\n
        -Prova de Redação
    </string>
    <string name="formated_exam_grounds_for_desqualification">
        -Não acertar nenhuma questão → eliminado\n
        -Redação zerada → eliminado (para cursos superiores)
    </string>
    <string name="formated_whats_to_bring">
        -Documento de identificação com foto\n
        -Caneta esferográfica azul ou preta\n
        -Garrafa de água
    </string>
    <string name="formated_whats_to_not_bring">
        -Bonés, véus, óculos escuros ou fones\n
        -Aparelhos eletrônicos (devem ser desligados e guardados)\n
        -Não pode consumir alimentos na sala
    </string>
</resources>