<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExamGuide">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_secundary"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="20sp"
        android:paddingRight="25dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/rounded_border_blue"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="73dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/logo_ifrs__2___1___1_"
                tools:srcCompat="@drawable/logo_ifrs" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="@font/allerta"
                android:paddingTop="8sp"
                android:text="CAMPUS\nROLANTE"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_border_green"
                android:paddingStart="5dp"
                android:paddingTop="8dp"
                app:title="menu"></androidx.appcompat.widget.Toolbar>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_border_blue_secundary"
            android:orientation="vertical"
            android:paddingStart="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="vertical"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Preparação"
                    android:fontFamily="@font/adlam_display"
                    android:textColor="@color/white"
                    >

                </TextView>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/adlam_display"
                    android:text="Guida de Provas"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="3sp"
            android:background="@drawable/more_rounded_border">
        </FrameLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="O que você precisa saber:"
                        android:fontFamily="@font/alata"
                        android:textColor="@color/white"
                        android:textSize="17dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/formated_what_you_need_know"
                        android:fontFamily="@font/alata"
                        android:background="@drawable/rounded_border_green"
                        android:textColor="@color/white"
                        android:padding="14dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Estrutura das provas:"
                        android:fontFamily="@font/alata"
                        android:textColor="@color/white"
                        android:textSize="17dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_border_blue_full"
                        android:padding="5dp"
                        android:text="Ensino Médio Integrado:"
                        android:fontFamily="@font/alata"
                        android:textColor="@color/white"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/formated_exam_integrated"
                        android:fontFamily="@font/alata"
                        android:background="@drawable/rounded_border_green"
                        android:textColor="@color/white"
                        android:padding="10dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_border_blue_full"
                        android:padding="5dp"
                        android:text="Técnico Subsequente:"
                        android:fontFamily="@font/alata"
                        android:textColor="@color/white"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/formated_exam_tecnic"
                        android:fontFamily="@font/alata"
                        android:background="@drawable/rounded_border_green"
                        android:textColor="@color/white"
                        android:padding="10dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_border_blue_full"
                        android:padding="5dp"
                        android:text="Curso Superior"
                        android:fontFamily="@font/alata"
                        android:textColor="@color/white"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/formated_exam_superior"
                        android:fontFamily="@font/alata"
                        android:background="@drawable/rounded_border_green"
                        android:textColor="@color/white"
                        android:padding="10dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Causas para eliminação:"
                        android:fontFamily="@font/alata"
                        android:textColor="@color/white"
                        android:textSize="17dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/formated_exam_grounds_for_desqualification"
                        android:fontFamily="@font/alata"
                        android:background="@drawable/rounded_border_green"
                        android:textColor="@color/white"
                        android:padding="14dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="O que levar:"
                        android:fontFamily="@font/alata"
                        android:textColor="@color/white"
                        android:textSize="17dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/formated_whats_to_bring"
                        android:fontFamily="@font/alata"
                        android:background="@drawable/rounded_border_green"
                        android:textColor="@color/white"
                        android:padding="14dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="O que NÃO usar/levar:"
                        android:fontFamily="@font/alata"
                        android:textColor="@color/white"
                        android:textSize="17dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/formated_whats_to_not_bring"
                        android:fontFamily="@font/alata"
                        android:background="@drawable/rounded_border_green"
                        android:textColor="@color/white"
                        android:padding="14dp"
                        />
                </LinearLayout>
                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    app:flexWrap="nowrap"
                    app:justifyContent="space_between"
                    app:alignItems="center">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BlueButton"
                        android:background="@drawable/rounded_border_blue_full"
                        android:text="Ingresso ifrs"
                        android:textStyle="bold"
                        android:onClick="openIngressoIfrs"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BlueButton"
                        android:background="@drawable/rounded_border_blue_full"
                        android:text="Provas"
                        android:onClick="openExams"
                        android:textStyle="bold"/>
                </com.google.android.flexbox.FlexboxLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>